--- a/eShopSolution.Application/eShopSolution.Application.csproj
+++ b/eShopSolution.Application/eShopSolution.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.CrmSdk.Workflow" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="6.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0" />
   </ItemGroup>
 
   <ItemGroup>
